Organizing directory, comments, config, smarter checking.
--HG--
rename : badwords.json => data/badwords.json
rename : bls_rawlist.txt => data/bls_rawlist.txt
rename : bls_rawpage.html => data/bls_rawpage.html
rename : titlecase/__init__.py => lib/titlecase/__init__.py
rename : titlecase/__init__.pyc => lib/titlecase/__init__.pyc
rename : titlecase/tests.py => lib/titlecase/tests.py

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 syntax: glob
 
-credentials.ini
 .DS_Store
+*.pyc
 output.png
-helvetica-ultra-compressed.ttf
 last_replied_to.txt
+config/credentials.ini
+config/twitter_global_config.json
+data/helvetica-ultra-compressed.ttf
