--- a/config/config.ini
+++ b/config/config.ini
@@ -2,8 +2,16 @@
 careerbuilder_live = 0
 googleimage_live = 0
 twitter_live = 0
+actively_tweet = 0
+# the daily limit is hard; hourly limit is conservative and soft
+twitter_hourly_limit = 30
+twitter_daily_limit = 1000
 
 [settings]
+faking_requests = 1
+taking_requests = 1
+log_imagemagick = 0
+requests_per_run = 3
 minyear = 2007
 # no value for maxyear means using current year
 maxyear = 
