--- a/config/config.ini
+++ b/config/config.ini
@@ -1,17 +1,18 @@
 [services]
-careerbuilder_live = 0
-googleimage_live = 0
-twitter_live = 0
+careerbuilder_live = 1
+googleimage_live = 1
+twitter_live = 1
 actively_tweet = 0
 # the daily limit is hard; hourly limit is conservative and soft
 twitter_hourly_limit = 30
 twitter_daily_limit = 1000
+# options are active, moderate, and off
+google_safesearch = active
 
 [settings]
-faking_requests = 1
-taking_requests = 1
+faking_requests = 0
+taking_requests = 0
 log_imagemagick = 0
-requests_per_run = 3
+# currently running every 2 minutes, this comes to 30/hour
+requests_per_run = 1
 minyear = 2007
-# no value for maxyear means using current year
-maxyear = 
