Ability to post the length of the queue.

--- a/config/config.ini
+++ b/config/config.ini
@@ -13,6 +13,6 @@ google_safesearch = active
 faking_requests = 0
 taking_requests = 0
 log_imagemagick = 0
-# currently running every 2 minutes, this comes to 30/hour
+# currently running every 2 minutes, so this comes to 30/hour
 requests_per_run = 1
 minyear = 2007
