--- a/config/config.ini
+++ b/config/config.ini
@@ -7,11 +7,11 @@ actively_tweet = 1
 twitter_hourly_limit = 30
 twitter_daily_limit = 1000
 # options are active, moderate, and off
-google_safesearch = active
+google_safesearch = moderate
 
 [settings]
 faking_requests = 0
-taking_requests = 0
+taking_requests = 1
 log_imagemagick = 0
 # currently running every 2 minutes, so this comes to 30/hour
 requests_per_run = 1
