Separate the taking of requests with the fulfillment of them to keep the queue accurate.

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,8 +1,8 @@
 [services]
-careerbuilder_live = 1
-googleimage_live = 1
-twitter_live = 1
-actively_tweet = 1
+careerbuilder_live = 0
+googleimage_live = 0
+twitter_live = 0
+actively_tweet = 0
 # the daily limit is hard; hourly limit is conservative and soft
 twitter_hourly_limit = 30
 twitter_daily_limit = 1000
@@ -12,6 +12,7 @@ google_safesearch = moderate
 [settings]
 faking_requests = 0
 taking_requests = 1
+making_requests = 0
 log_imagemagick = 0
 # currently running every 2 minutes, so this comes to 30/hour
 requests_per_run = 1
