Breaking out image functionality from Twitter functionality
--HG--
rename : SimulatorGenerator.py => SimulatorGeneratorTwitter.py

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,8 +1,10 @@
 [services]
-careerbuilder_live = 0
-googleimage_live = 0
-twitter_live = 0
-actively_tweet = 0
+# whether to search career builder for job titles or fake it
+careerbuilder_live = 1
+# whether to pull data like the mentions list from live twitter or fake it
+twitter_live = 1
+# whether to actually send out tweets
+actively_tweet = 1
 # the daily limit is hard; hourly limit is conservative and soft
 twitter_hourly_limit = 35
 twitter_daily_limit = 1000
@@ -10,10 +12,15 @@ twitter_daily_limit = 1000
 google_safesearch = moderate
 
 [settings]
+# for debugging
 faking_requests = 0
+# record requests from mentions
 taking_requests = 1
+# fulfill requests
 making_requests = 0
-log_imagemagick = 0
 # currently running every 2 minutes, so this comes to 30/hour
 requests_per_run = 1
+# output information about the ImageMagick commands
+log_imagemagick = 0
+# the minimum year for the random selection
 minyear = 2007
