--- a/config/config.ini
+++ b/config/config.ini
@@ -8,6 +8,9 @@ actively_tweet = 1
 # the daily limit is hard; hourly limit is conservative and soft
 twitter_hourly_limit = 35
 twitter_daily_limit = 1000
+# the WOEID to pass to our Twitter trending topics request 
+	# 23424977 == United States
+twitter_trends_woeid = 23424977
 # options are active, moderate, and off
 google_safesearch = moderate
 
