Some leftover changes I guess from when I was trying to make a web interface?

--- a/config/config.ini
+++ b/config/config.ini
@@ -8,8 +8,7 @@ actively_tweet = 1
 # the daily limit is hard; hourly limit is conservative and soft
 twitter_hourly_limit = 35
 twitter_daily_limit = 1000
-# the WOEID to pass to our Twitter trending topics request 
-	# 23424977 == United States
+# the WOEID to pass to our Twitter trending topics request; 23424977 == United States
 twitter_trends_woeid = 23424977
 # options are active, moderate, and off
 google_safesearch = moderate
@@ -21,7 +20,7 @@ faking_requests = 0
 taking_requests = 1
 # fulfill requests
 making_requests = 1
-# currently running every 2 minutes, so this comes to 30/hour
+# currently running every hour on the half hour
 requests_per_run = 1
 # output information about the ImageMagick commands
 log_imagemagick = 0
